// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeFileUpdater update saves code with new steps 1`] = `
"  someCode();
  const page = await qawolf.waitForPage(context, 0, { waitUntil: \\"domcontentloaded\\" });
  await page.click(\\"text=Log in\\");
  await page.click(\\"#username\\");
  // 🐺 create code here
  otherCode();"
`;

exports[`CodeFileUpdater update saves code with new steps 2`] = `
"  someCode();
  const page = await qawolf.waitForPage(context, 0, { waitUntil: \\"domcontentloaded\\" });
  await page.click(\\"text=Log in\\");
  await page.click(\\"#username\\");
  await page.fill(\\"#username\\", \\"tomsmith\\");
  await page.press(\\"#username\\", \\"Tab\\");
  await page.fill(\\"#password\\", \\"SuperSecretPassword!\\");
  await page.press(\\"#password\\", \\"Enter\\");
  await page.click(\\"text=Log out\\");
  // 🐺 create code here
  otherCode();"
`;
